graph forces work how I want, nothing is clipped offscreen

--- a/src/data/Makefile
+++ b/src/data/Makefile
@@ -8,3 +8,9 @@ shp2json us_cities.shp -o us_cities.json
 
 # Cull down us_cities.json to only the cities matching us_cities_with_FID.json
 node choose_cities.js
+
+# For every chosen city, join its coordinate data with the rest of its data
+# Convert stringified numerical values back to numerical values
+# Before joining coordinate data, convert it through a geographic projection into pixel coordinates
+# Calculate each city's radius using its policing budget
+node clean_city_data.js
